--- a/Proyecto grafos/Proyecto grafos/MainWindow.xaml
+++ b/Proyecto grafos/Proyecto grafos/MainWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="Proyecto_grafos.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Proyecto_grafos"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="AirWar" Height="600" Width="800">
     <Grid>
-
+        <Canvas Name="MapaCanvas" Background="LightBlue">
+            <!-- Añadir la batería antiaérea -->
+            <local:ControlBateriaAntiaerea x:Name="BateriaAntiaerea" Canvas.Left="375" Canvas.Top="550"/>
+        </Canvas>
     </Grid>
 </Window>
+
